cabal-version:      3.0
name:               correct-check
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alexander Vieth
maintainer:         aovieth@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Composite
                      Driver
                      Location
                      Property
                      Space
                      Space.Ordered
                      Space.Random
                      Space.Search
                      Types
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
                      containers,
                      parallel,
                      splitmix,
                      stm,
                      text,
                      prettyprinter,
                      prettyprinter-ansi-terminal
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options:      -threaded
                      -fno-warn-name-shadowing

executable examples
    main-is:          Main.hs
    other-modules:    Basic
                      Strategy
                      UnitTest
    build-depends:    base,
                      correct-check
    hs-source-dirs:   examples
    default-language: GHC2021
    ghc-options:      -threaded
                      -fno-warn-name-shadowing
