cabal-version:      3.0
name:               correct-check
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alexander Vieth
maintainer:         aovieth@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Composite
                      Check
                      Quick.Check
                      Location
                      Pretty
                      Space
                      Space.Ordered
                      Space.Random
                      Space.Search
                      Types
                      Unit
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
                      ansi-terminal,
                      async,
                      containers,
                      parallel,
                      splitmix,
                      stm,
                      text,
                      prettyprinter,
                      prettyprinter-ansi-terminal,
                      unliftio-core,
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options:      -threaded
                      -fno-warn-name-shadowing

executable examples
    main-is:          Main.hs
    other-modules:    Basic
                      Strategy
    build-depends:    base,
                      correct-check,
                      async
    hs-source-dirs:   examples
    default-language: GHC2021
    ghc-options:      -threaded
                      -O2
                      -- Increasing this can sometimes bear fruit, but 2 is usually enough.
                      -fsimplifier-phases=2
                      -fno-warn-name-shadowing
